--- a/pggapp/development_journal/wk02.md
+++ b/pggapp/development_journal/wk02.md
@@ -1,3 +1,36 @@
 ###
+```
 npm install framer-motion
 ```
+
+###YouTube Transcript
+
+Today, I'm excited to present my project which pays tribute to the iconic world of Pokémon. Why Pokémon, you ask? Well, besides the adventure and fun it's provided for nearly three decades, it has also championed cleaner energy sources and advocated for methods beyond fossil fuels. Remember when Pikachu, your trusty companion, powered up electrical devices? Alright, enough of that—let's dive into the heart of my application.
+
+My project revolves around mimicking the design and functionalities of pokemon.com/uk. If you take a glance, you'll find a trio of main pages: the homepage, the Pokédex, and the video games & apps section. I've recreated these pages, adding a bit my own flair and enhancements.
+
+Our journey begins with the homepage. At the top, you'll find a distinctive search bar, marked with the signature Facebook/Meta color. I've taken advantage of the capabilities of Material-UI for streamling development. Notably, every section of the app incorporates the search bar, a feature we'll explore more later on.
+
+There is an app bar which stands as your navigation hub, offering access to various parts of the app. Continuing down the page, I've used the Material UI Image List to arrange a collection of images. The layout is one image taking center stage and others equally important, each accompanied by title bars.
+
+Venturing further, an introduction about the Project and API I ussed. The PokeAPI has no limit on API call which generously offering a wealth of data. With a multitude of URLs leading to diverse content, it outshines other gaming franchises. My application has captured the wealth of information but it still only just scratching the surface of this API.
+
+Returning to my application, the right-hand side features a comprehensive mapping of Pokémon types, each styled with their corresponding color schemes.
+
+Now, onto the motion component. Through the framer motion library, a dynamic slideshow comes to life. You can navigate using dots or arrows, seamlessly swiping through a selection of featured Pokémon. Moreover, an "Explore More Pokémon" button can take you towards the Pokédex—an alternative route accessible via the menu as well.
+
+In the Pokédex, all the Pokémon are at your fingertips. I've harnessed the power of API to fetch and display their unique IDs and names. A sorting menu offers flexibility, allowing sorting by either ID or name, ascending or descending.
+
+Navigating between pages is a breeze, thanks to the pagination component. Jumping between pages is now a simple click away.
+
+For a delightful twist, I've introduced a "Surprise Me" button. Press it, and you'll be greeted by a random assortment of 12 Pokémon—a dash of unpredictability to your gallery experience. Not to worry, though; the "Fetch All" button resets things to normal.
+
+Each Pokémon boasts a "View Details" button. A single click reveals a wealth of information on the individual Sprite Page. Leveraging the API, I present their base information and a mix of various images. Their types are in harmony with the color scheme showing in the homepage. To gauge their statistics, you'll find MUI Linear Progress bars, indicating strengths. Notably, Species Flavor Facts add depth and I found them very interesting, sourced from a distinct URL.
+
+Additionally, TV components add a splash of variety, mirroring the setup in the Game and Apps page. I've integrated YouTube and other game app links for added engagement.
+
+Beyond Pokémon, my app also explore into Pokémon Items. It fetches data from another URL, showcasing IDs, names, and thumbnails of these items.
+
+To cap it off, let's discuss the search function. Back on the Sprite Page, the search bar accommodates searches by both ID and name—say, "Pikachu." The input field kindly converts your input to lowercase. For security, I've restricted input to numbers, characters, and dashe. There's an example without these restrictions user can navigate to other pages through the search field. This is the aspect of search field filter fuction I'm excited to demonstrate.
+
+I appreciate the opportunity to study this course with you. Please explore the app and provide feedback. If you have any questions, feel free to ask.Thank you.
