--- a/pggapp/development_journal/wk02.md
+++ b/pggapp/development_journal/wk02.md
@@ -3,6 +3,9 @@
 npm install framer-motion
 ```
 
+## make docker file.
+[How to Dockerize a React Application](https://dev.to/ayesh_nipun/how-to-dockerize-a-react-application-kpa)
+
 ###YouTube Transcript
 
 Today, I'm excited to present my project which pays tribute to the iconic world of Pokémon. Why Pokémon, you ask? Well, besides the adventure and fun it's provided for nearly three decades, it has also championed cleaner energy sources and advocated for methods beyond fossil fuels. Remember when Pikachu, your trusty companion, powered up electrical devices? Alright, enough of that—let's dive into the heart of my application.
